# project4_KAG

./: .env  ENTERPRISE_TECH_INTERVIEW_QA.md  PROJECT_COMPREHENSIVE_DOCUMENTATION.md  PROJECT_DETAILED_GUIDE.md  PROJECT_INTERVIEW_QA.md  README.md  pyproject.toml  resume_solo.md  streamlit_app.py
app/: __init__.py  main.py
app/agents/: __init__.py  (+1 more)
data/: evidence_fts.sqlite3  knowledge_registry.json  knowledge_upload_jobs.json
knowledge_sources/: README.md  medlineplus_cholesterol.txt  medlineplus_ckd.txt  medlineplus_high_blood_pressure.txt  nhlbi_cholesterol_fact_sheet_page.html
processfiles/: INTERVIEW_QA_FULL.md  KNOWLEDGE_GRAPH_MEMORY_IMPLEMENTATION_GUIDE.md  NEO4J_GRAPH_DETAILED_GUIDE.md  OPTIMIZATION_IMPLEMENTATION_NOTES.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_PLAN_ROUND2.md  OPTIMIZATION_PLAN_ROUND3.md  OPTIMIZATION_ROUND2_IMPLEMENTATION_NOTES.md  OPTIMIZATION_ROUND3_FINAL_NOTES.md  PROJECT_FINAL_REVIEW_AND_SUMMARY.md  PROJECT_FULL_WALKTHROUGH_AND_QA.md  PROJECT_IMPLEMENTATION_SUMMARY.md  QUERY_FLOW_IMPLEMENTATION_GUIDE.md  QUERY_PROCESSING_FLOW_DETAIL.md  RESUME_PROJECT_EXPERIENCE.md  RETRIEVAL_EVALUATION_REPORT.md  resume.md  resume_solo.md  我认为有用介绍.md  自问自答.md
scripts/: evaluate_retrieval_metrics.py
tests/: test_agent_tools.py  test_chat_history_service.py  test_document_ingestion.py  test_evidence_retrieval.py  test_indicator_normalizer.py  test_input_parser.py  test_kb_builder.py  test_medical_agent.py  test_medical_kag_pipeline.py  test_medical_multi_agent.py  test_react_agent.py  test_retrieval_round2.py  test_round3_final.py  test_rules_config.py  (+1 more)
(+63 files in other folders)
