[project]
name = "project-4-medical-kag-lite"
version = "0.1.0"
description = "Medical KAG-lite system for physical exam assessment"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.1",
    "langgraph>=0.2.0",
    "langchain>=1.2.0",
    "langchain-community>=0.3.0",
    "neo4j>=5.22.0",
    "pymilvus>=2.4.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "requests>=2.32.0",
    "streamlit>=1.56.0",
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
